更新依赖版本;添加几个实用的小方法